--- a/32 Capstone Project - Battleship/style.css
+++ b/32 Capstone Project - Battleship/style.css
@@ -1,8 +1,12 @@
 html, body {
   margin: 0;
   padding: 0;
+  background-color: rgb(48, 54, 143);
 }
 
 canvas {
-  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%, -50%);
 }
